feat: logout and session functions
